<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="quick_add_widget_description">Add Transaction</string>
    <string name="quick_add_widget_label">Quick Add</string>
    <string name="budget_widget_desc">Track your top budgets</string>
    <string name="accounts_widget_desc">View your pinned account balances</string>
    <string name="shortcut_add_expense_short">Expense</string>
    <string name="shortcut_add_expense_long">Add Expense</string>
    <string name="shortcut_add_income_short">Income</string>
    <string name="shortcut_add_income_long">Add Income</string>
    <string name="shortcut_transfer_short">Transfer</string>
    <string name="shortcut_transfer_long">Transfer Between Accounts</string>
    <string name="shortcut_presets_short">Presets</string>
    <string name="shortcut_presets_long">Quick Presets</string>
    <string name="quick_tile_label">Quick Add</string>
</resources>
